--- a/packages/blog-starter-kit/themes/personal/styles/index.css
+++ b/packages/blog-starter-kit/themes/personal/styles/index.css
@@ -46,3 +46,57 @@
     background-color: transparent;
     color: #ddd;
 }
+
+img {
+  display: block;
+  height: auto;
+  width: 100%;
+}
+
+.gallery-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding: 1%;
+}
+
+.container__item {
+  height: auto;
+  margin-top: 1vw;
+  width: 98vw;
+}
+
+.container__item:first-child {
+  margin-top: 0;
+}
+
+@media (min-width: 768px) {
+  .container__item:first-child {
+    width: 100%;
+  }
+  .container__item:nth-child(n+2) {
+    flex: 1;
+    margin-right: 1%;
+  }
+  .container__item:last-child {
+    margin-right: 0;
+  }
+}
+
+@media (min-width: 992px) {
+  .container__item:nth-child(-n+2) {
+    flex: none;
+    margin: 0;
+    width: 49.5%;
+  }
+  .container__item:first-child {
+    margin-right: 1%;
+  }
+  .container__item:nth-child(n+3) {
+    flex: 1;
+    margin-right: 1%;
+  }
+  .container__item:last-child {
+    margin-right: 0;
+  }
+}
